# ncover

./: Cargo.toml  Makefile  README.md  build.rs
extra/: io.github.xjmzx.NCover.desktop  io.github.xjmzx.XColorGui.desktop  xcolor.desktop
ncover/: Cargo.toml
ncover/src/: main.rs
src/: atoms.rs  cli.rs  color.rs  format.rs  location.rs  main.rs  pixel.rs  selection.rs
xcolor-gui/: Cargo.toml
xcolor-gui/src/: main.rs
