[package]
name = "xcolor"
version = "0.6.0"
description = "Lightweight color picker for X11"
authors = [
  "Samuel Laurén <samuel.lauren@iki.fi>",
  "Callum Osmotherly <acheronfail@gmail.com>"
]
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["color", "utility", "color-picker", "x11"]
homepage = "https://github.com/xjmzx/xcolor"
repository = "https://github.com/xjmzx/xcolor"
build = "build.rs"
exclude = ["_config.yml"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1"
nom = "7"
clap = { version = "4", features = ["cargo", "derive"] }
nix = { version = "0.29", features = ["fs", "process"] }

[dependencies.x11]
version = "2"
features = ["xlib", "xcursor"]

[dependencies.xcb]
version = "1.5"
features = ["xlib_xcb"]

[build-dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
clap_complete = "4"

[profile.release]
lto = true
panic = "abort"

[workspace]
members = ["xcolor-gui"]
