[package]
name = "ncover"
version = "0.1.0"
description = "n.cover — colour picker and cover / label artwork tool (GTK4)"
authors = ["xjmzx"]
license = "MIT"
readme = "../README.md"
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "ncover"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
gio = "0.20"
glib = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
roxmltree = "0.20"
# The batch run happens on a worker thread; this carries its progress back to
# the GTK main loop. glib::MainContext::channel is gone in glib 0.20.
async-channel = "2"
